--- a/UtopiaCity/Views/Shared/_ShowUserCabinetPartial.cshtml
+++ b/UtopiaCity/Views/Shared/_ShowUserCabinetPartial.cshtml
@@ -1,9 +1,10 @@
-﻿<a asp-action="Index">
+﻿<a asp-action="Index" asp-controller="CitizensAccount">
     <div class="form-group">
         <input type="submit" value="CitizenAccountPage" class="btn btn-primary" />
     </div>
 </a>
-<a asp-action="">
+
+<a asp-action="IndexFriends" asp-controller="CitizenFriends">
     <div class="form-group">
         <input type="submit" value="Friends" class="btn btn-primary" />
     </div>
