--- a/UtopiaCity/Views/CitizensAccount/DeleteAppUser.cshtml
+++ b/UtopiaCity/Views/CitizensAccount/DeleteAppUser.cshtml
@@ -6,4 +6,4 @@
     <h2>Are you sure you want to delete your account?</h2>
     <input type="submit" value="Yes" class="btn btn-primary" />
 </form>
-<a asp-action="ShowUserCabinet">Back to Cabinet</a>
+<a asp-action="Index">Back to Cabinet</a>
