--- a/UtopiaCity/Views/CitizensTasks/Index.cshtml
+++ b/UtopiaCity/Views/CitizensTasks/Index.cshtml
@@ -7,34 +7,20 @@
 <p>
     <a asp-action="Create">Create New Task</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReminderDate)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ReminderDate)
-                </td>
-                <td>
+
+@foreach (var item in Model)
+{
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card border-primary mb-3" style="width: 18rem;">
+                <div class="card-body">
+                    <div class="card-header">@item.Description</div>
+                    <p class="card-text">@item.ReminderDate</p>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                </div>
+            </div>
+        </div>
+    </div>
+}
