--- a/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
+++ b/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
@@ -11,17 +11,18 @@
 <div class="clock"></div>
 
 @section Scripts{
-@*
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-*@
-    <script>$(document).ready(function () {
+    @*
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+    *@
+    <script>
+    $(document).ready(function () {
             clockUpdate();
             setInterval(clockUpdate, 1000);
         })
 
         function clockUpdate() {
             var date = new Date();
-            $('.clock').css({ 'color': '#212529', 'font-size' : '16px' });
+            $('.clock').css({ 'color': '#212529', 'font-size': '16px' });
             function addZero(x) {
                 if (x < 10) {
                     return x = '0' + x;
@@ -54,6 +55,7 @@
 
         <a class="nav-link text-dark" asp-area="" asp-controller="PermitedConditions" asp-action="Index">Разрешенные условия</a>
 
+        <a class="nav-link text-dark" asp-area="" asp-controller="OverrideBreadcrumb" asp-action="Index">Хлебные Крошки</a>
     </li>
 </ul>
 
