Rename CommoModel to MultipleModel and refactor ScheduleController(But direct cast is longer). And added test breadcrums

--- a/UtopiaCity/Views/Schedule/Index.cshtml
+++ b/UtopiaCity/Views/Schedule/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model UtopiaCity.Models.TimelineModel.CollectionDataModel.CommonModel
+﻿@model UtopiaCity.Models.TimelineModel.CollectionDataModel.MultipleModel
 @using UtopiaCity.Controllers.Timeline
 <h1>Hello from CommonModel</h1>
 
