--- a/UtopiaCity/Views/CityAdministration/ResidentAccount/Index.cshtml
+++ b/UtopiaCity/Views/CityAdministration/ResidentAccount/Index.cshtml
@@ -4,10 +4,25 @@
     ViewData["Title"] = "Residents Accounts";
 }
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#mySearch").on("keyup", function () {
+            var value = $(this).val().toLowerCase();
+            $("#myTable tr").filter(function () {
+                $(this).toggle($(this).children().not(".nosearch").text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    });
+</script>
+
 <h1>Residents</h1>
 
 <p>
     <a asp-action="Create">Create</a>
+</p>
+<p>
+    <input id="mySearch" class="col-lg-3" type="text" placeholder="Search..">
 </p>
 <table class="table">
     <thead>
@@ -27,28 +42,29 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FamilyName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BirthDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Gender)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+    <tbody id="myTable">
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FamilyName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BirthDate)
+                </td>
+                <td class="nosearch">
+                    @Html.DisplayFor(modelItem => item.Gender)
+                </td>
+                <td class="nosearch">
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 <p>
