Added live clock and pagination for resident acccounts list.

--- a/UtopiaCity/Views/CityAdministration/_MyLayout.cshtml
+++ b/UtopiaCity/Views/CityAdministration/_MyLayout.cshtml
@@ -11,6 +11,7 @@
                 <li><a class="btn btn-primary" style="width:90%; margin:3px" asp-controller="ResidentAccount" asp-action="Index">Residents accounts</a></li>
                 <li><a class="btn btn-primary" style="width:90%; margin:3px" asp-controller="Marriage" asp-action="Index">Marriage</a></li>
                 <li><a class="btn btn-primary" style="width:90%; margin:3px" asp-controller="RequestsConfirmation" asp-action="Index">Sports Confirmation</a></li>
+                <li><a class="btn btn-primary" style="width:90%; margin:3px" asp-controller="Passenger" asp-action="ListOfArrivals">List Of Arriving Passengers</a></li>
             </ul>
         </div>
         <div class="col-sm-9" style="background-color:white; align-content:center;">
