--- a/UtopiaCity/Views/_ViewImports.cshtml
+++ b/UtopiaCity/Views/_ViewImports.cshtml
@@ -7,3 +7,4 @@
 @using UtopiaCity.Models.Airport.TransportManagerSystem.Enums
 @using UtopiaCity.Services.Airport.Dictionaries
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, UtopiaCity
