--- a/UtopiaCity/Views/CityAdministration/Index.cshtml
+++ b/UtopiaCity/Views/CityAdministration/Index.cshtml
@@ -3,6 +3,31 @@
     ViewData["Title"] = "City Administration";
 }
 
+<script>
+    
+    function time() {
+        var d = new Date();
+        var s = d.getSeconds();
+        var m = d.getMinutes();
+        var h = d.getHours();
+        var date = d.toDateString();
+        timediv.textContent = ("0" + h).substr(-2) + ":" + ("0" + m).substr(-2) + ":" + ("0" + s).substr(-2);
+        datediv.textContent = date;
+    }
+
+    setInterval(time, 100);
+</script>
+
 <div class="container-fluid">
     <h4 class="display-5" style="text-align:center;">Welcome to City Administration</h4>
 </div>
+
+<div id="datediv" style="font-size: 30px;
+        margin-left: 10px;
+        margin-top: 10px;
+">Date</div>
+
+<div id="timediv" style="font-size: 30px;
+        margin-left: 10px;
+        margin-top: 20px;
+">Time</div>
