--- a/UtopiaCity/Views/CityAdministration/ResidentAccount/Index.cshtml
+++ b/UtopiaCity/Views/CityAdministration/ResidentAccount/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<ResidentAccount>
+﻿@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+@model AccountsListViewModel
 
 @{
     ViewData["Title"] = "Residents Accounts";
@@ -7,9 +9,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
-        $("#mySearch").on("keyup", function () {
+        $("#accountSearch").on("keyup", function () {
             var value = $(this).val().toLowerCase();
-            $("#myTable tr").filter(function () {
+            $("#accountsTable tr").filter(function () {
                 $(this).toggle($(this).children().not(".nosearch").text().toLowerCase().indexOf(value) > -1)
             });
         });
@@ -22,28 +24,28 @@
     <a asp-action="Create">Create</a>
 </p>
 <p>
-    <input id="mySearch" class="col-lg-3" type="text" placeholder="Search..">
+    <input id="accountSearch" class="col-lg-3" type="text" placeholder="Search..">
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                @Html.DisplayNameFor(model => model.Accounts.FirstOrDefault().FirstName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FamilyName)
+                @Html.DisplayNameFor(model => model.Accounts.FirstOrDefault().FamilyName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BirthDate)
+                @Html.DisplayNameFor(model => model.Accounts.FirstOrDefault().BirthDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Gender)
+                @Html.DisplayNameFor(model => model.Accounts.FirstOrDefault().Gender)
             </th>
             <th></th>
         </tr>
     </thead>
-    <tbody id="myTable">
-        @foreach (var item in Model)
+    <tbody id="accountsTable">
+        @foreach (var item in Model.Accounts)
         {
             <tr>
                 <td>
@@ -67,6 +69,21 @@
         }
     </tbody>
 </table>
-<p>
-    <a asp-controller="Passenger" asp-action="ListOfArrivals">List Of Arriving Passengers</a>
-</p>
+<div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true"
+     page-class="btn" page-class-normal="btn-outline-dark"
+     page-class-selected="btn-primary" class="btn-group pull-right m-1">
+</div>
+
+<div>
+    <br />
+    <h6>Items per page</h6>
+</div>
+
+<select onchange="location = this.value">
+    <option>Select</option>
+    <option value="@Configuration["applicationUrl"]/ResidentAccount/index?pageSize=2">2</option>
+    <option value="@Configuration["applicationUrl"]/ResidentAccount/index?pageSize=4">4</option>
+    <option value="@Configuration["applicationUrl"]/ResidentAccount/index?pageSize=6">6</option>
+    <option value="@Configuration["applicationUrl"]/ResidentAccount/index?pageSize=8">8</option>
+    <option value="@Configuration["applicationUrl"]/ResidentAccount/index?pageSize=10">10</option>
+</select>
