--- a/UtopiaCity/Views/Flight/FlightList.cshtml
+++ b/UtopiaCity/Views/Flight/FlightList.cshtml
@@ -56,9 +56,6 @@
     <a asp-action="Create">Create New</a>    
 </p>
 <p>
-    <a asp-area="" asp-controller="Airline" asp-action="Index">List of Available Airlines</a>
-</p>
-<p>
-    <a asp-action="GetDistanceByApi">API Testing</a>
+    <a asp-area="" asp-controller="CheckedFlight" asp-action="Index">List of checked flight by weather reports </a>
 </p>
 
