--- a/UtopiaCity/Views/CityAdministration/ResidentAccount/Create.cshtml
+++ b/UtopiaCity/Views/CityAdministration/ResidentAccount/Create.cshtml
@@ -29,9 +29,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" class="form-control">
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
+                <select asp-for="Gender" asp-items="Html.GetEnumSelectList<Gender>()" class="form-control">
+                    <option selected="selected" value="">Select</option>
                 </select>
             </div>
             <div class="form-group">
