--- a/UtopiaCity/Views/TransportManagers/CreatePartialView.cshtml
+++ b/UtopiaCity/Views/TransportManagers/CreatePartialView.cshtml
@@ -16,11 +16,7 @@
                 <select asp-for="ForPassengerId" class ="form-control" asp-items="ViewBag.ForPassengerId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ForCompanyId" class="control-label"></label>
-                <select asp-for="ForCompanyId" class="form-control" asp-items="ViewBag.ForCompanyId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" asp-action="Create" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
