--- a/UtopiaCity/Views/TransportManagers/IndexLuggageView.cshtml
+++ b/UtopiaCity/Views/TransportManagers/IndexLuggageView.cshtml
@@ -6,9 +6,6 @@
 
 <h1>Main Airport Warehouse</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -51,3 +48,6 @@
 }
     </tbody>
 </table>
+<p>
+    <a asp-action="Index">Back to List</a>
+</p>
