--- a/UtopiaCity/Views/Company/Create.cshtml
+++ b/UtopiaCity/Views/Company/Create.cshtml
@@ -36,10 +36,10 @@
                 <label asp-for="BankId" class="control-label"></label>
                 <select asp-for="BankId" class ="form-control" asp-items="ViewBag.BankId"></select>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="CompanyStatusId" class="control-label"></label>
                 <select asp-for="CompanyStatusId" class ="form-control" asp-items="ViewBag.CompanyStatusId"></select>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
