added table to HomeView; added style; updated migrations

--- a/UtopiaCity/Views/Home/Index.cshtml
+++ b/UtopiaCity/Views/Home/Index.cshtml
@@ -9,8 +9,100 @@
    
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-<div class="text-left">
-    <h4>
-        <a class="nav-link text-dark" asp-area="" asp-controller="ClinicVisit" asp-action="Index">Clinic Visits</a>
-    </h4>
+<div>
+    <table class="mainPageTable">
+        <thead>
+            <tr>
+                <th class="mainTh">
+                    <img src="~/images/MainPage/medical-icon 200px.jpg" alt="" />
+                </th>
+                <th class="mainTh">
+                    <img src="~/images/MainPage/travel-icon 200.jpg" alt="" />
+                </th>
+                <th class="mainTh">
+                    <img src="~/images/MainPage/sport-icon 200px.jpg" alt="" />
+                </th>
+                <th class="mainTh">
+                    <img src="~/images/MainPage/life-icon 200 px.jpg" alt="" />
+                </th>
+                <th class="mainTh">
+                    <img src="~/images/MainPage/account-icon 200.jpg" alt="" />
+                </th>
+            </tr>
+            <tr>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="ClinicVisit" asp-action="Index">Clinic Visits</a>
+                    </h4>
+                </td>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Flight" asp-action="Index">Travelling</a>
+                    </h4>
+                </td>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Sport" asp-action="Index">Sport</a>
+                    </h4>
+                </td>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Life" asp-action="Index">Life</a>
+                    </h4>
+                </td>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="CitizensAccount" asp-action="Index">Citizen's Account</a>
+                    </h4>
+                </td>
+            </tr>
+        </thead>        
+        <tfoot class="mainFooter">
+            <tr class="mainTr">
+                <th class="specialTh">
+                    <img src="~/images/MainPage/city_adminSecond_icon 200px.jpg" alt="" />
+                </th>
+                <th class="specialTh">
+                    <img src="~/images/MainPage/business_icon 200px.jpg" alt="" />
+                </th>
+                <th class="specialTh">
+                    <img src="~/images/MainPage/estateSecond_icon 200px.jpg" alt="" />
+                </th>
+                <th class="specialTh">
+                    <img src="~/images/MainPage/timeline_icon 200px.jpg" alt="" />
+                </th>
+                <th class="specialTh">
+                    <img src="~/images/MainPage/weatherSecond_icon 200px.jpg" alt="" />
+                </th>
+            </tr>
+            <tr>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="CityAdministrationHome" asp-action="Index">City Administration</a>
+                    </h4>
+                </td>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Business" asp-action="Index">Business</a>
+                    </h4>
+                </td>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="HousingSystem" asp-action="Index">HousingSystem</a>
+                    </h4>
+                </td>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="TimelineBasic" asp-action="Index">Timeline</a>
+                    </h4>
+                </td>
+                <td class="mainTd">
+                    <h4>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="WeatherReport" asp-action="Index">Weather Forecast</a>
+                    </h4>
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+    
 </div>
