Adding working, form. But it has to be  more flexible , and comfortable.

--- a/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
+++ b/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
@@ -54,6 +54,7 @@
 
         <a class="nav-link text-dark" asp-area="" asp-controller="TimelineBasic" asp-action="Searching">Поиск</a>
 
+        <a class="nav-link text-dark" asp-area="" asp-controller="MailSender" asp-action="Index">Связь</a>
 </ul>
 
 <p>
