added loader img. Just styled it for good look

--- a/UtopiaCity/Views/MailSender/Index.cshtml
+++ b/UtopiaCity/Views/MailSender/Index.cshtml
@@ -4,11 +4,11 @@
     <title>Contact V2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css">
     <link rel="stylesheet" type="text/css" href="~/css/site.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -37,14 +37,17 @@
                 <div class="container-contact2-form-btn">
                     <div class="wrap-contact2-form-btn">
                         <div class="contact2-form-bgbtn"></div>
-                        <input type="button" class="contact2-form-btn" onclick="SendEmail();" value="Send Your Message"/>
+                        <input type="button" class="contact2-form-btn" id="send" onclick="SendEmail();" value="Send Your Message" />
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
+    <!-- Image loader -->
+    <div id='loader' style='display: none;'>
+        <img src='https://cdn.dribbble.com/users/442750/screenshots/2196790/3.gif' width='500px' height='500px'>
+    </div>
+    <!-- Image loader -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -54,29 +57,33 @@
     <script src="~/js/Timeline//modalViewVisual.js"></script>
 
     <script>
-
-    function SendEmail(){
-
-      $.ajax(
-      {
-        type: "POST",
-        url: '@Url.Action("SendEmail", "MailSender")',
-        data: {
-          Name: $("#name").val(),
-          Email: $("#email").val(),
-          Message: $("#message").val()
-        },
-        error: function (result) {
-          alert(result);
-        },
-        success: function (result) {
-          alert(result);
-          $("#name").val("");
-          $("#email").val("");
-          $("#message").val("");
-        }
-      });
-    }
+        function SendEmail() {
+            $.ajax(
+                {
+                    type: "POST",
+                    url: '@Url.Action("SendEmail", "MailSender")',
+                    data: {
+                        Name: $("#name").val(),
+                        Email: $("#email").val(),
+                        Message: $("#message").val()
+                    },
+                    beforeSend: function() {
+                        $("#loader").show();
+                    },
+                    error: function(result) {
+                        alert(result);
+                    },
+                    success: function(result) {
+                        alert(result);
+                        $("#name").val("");
+                        $("#email").val("");
+                        $("#message").val("");
+                    },
+                    complete: function (data) {
+                        $("#loader").hide();
+                    }
+                });
+            }
     </script>
 
 </body>
