Add buy, spent functionality Add service for work with citizenfinancecontroller add some Viewmodels add transaction table add views. Remove migrations

--- a/UtopiaCity/Views/CitizenFinance/_IndexPartial.cshtml
+++ b/UtopiaCity/Views/CitizenFinance/_IndexPartial.cshtml
@@ -9,6 +9,6 @@
         <a asp-action="ShowPurchases" class="btn btn-info m-1">Show purchases</a>
     </div>
     <div>
-        <a asp-action="ShowHistory" class="btn btn-info m-1">Show history</a>
+        <a asp-action="ShowHistory" class="btn btn-info m-1">Show transaction history</a>
     </div>
 </div>
