--- a/UtopiaCity/Views/CitizenFinance/Buy.cshtml
+++ b/UtopiaCity/Views/CitizenFinance/Buy.cshtml
@@ -1,7 +1,7 @@
-﻿@model UtopiaCity.Models.CitizenAccount.TransactionToTopUpViewModel
+﻿@model UtopiaCity.Models.CitizenAccount.TransactionToBuyViewModel
 
 @{
-    ViewData["Title"] = "TopUpBalance";
+    ViewData["Title"] = "BuySomething";
 }
 @if (!string.IsNullOrEmpty(ViewBag.Message))
 {
@@ -13,19 +13,21 @@
     <partial name="_IndexPartial" />
 </div>
 
-<h1 class="text-center">Top Up Balance</h1>
+<h1 class="text-center">Description of the purchase</h1>
+<h3 class="text-center">Your balance:<strong>@ViewBag.Balance$</strong></h3>
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="TopUpBalance">
+        <form asp-action="Buy">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Date"/>
+            <input type="hidden" asp-for="Date" />
+            <input type="hidden" asp-for="UserBalance" value="@ViewBag.Balance"/>
 
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label asp-for="RecipientsUsername" class="control-label"></label>
-                        <input asp-for="RecipientsUsername" class="form-control" />
-                        <span asp-validation-for="RecipientsUsername" class="text-danger"></span>
+                        <label asp-for="DescriptionOfThePurchase" class="control-label"></label>
+                        <input asp-for="DescriptionOfThePurchase" class="form-control" />
+                        <span asp-validation-for="DescriptionOfThePurchase" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -37,7 +39,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Top up balance" class="btn btn-primary btn-block" />
+                <input type="submit" value="Make purchase" class="btn btn-primary btn-block" />
             </div>
             <div class="form-group">
                 <a asp-action="Index" class=" btn btn-secondary btn-block">Back to List</a>
