--- a/UtopiaCity/Views/CitizenFriends/IndexRejected.cshtml
+++ b/UtopiaCity/Views/CitizenFriends/IndexRejected.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UtopiaCity.Models.CitizenAccount.AppUser>
 @{ ViewData["Title"] = "Index rejected"; }
 
-<div class="col-2 ml-3">
+<div>
     <partial name="_IndexPartial" />
 </div>
 
