Global refactoring . Addng flexible and comfortable modal view(contact form, change menu. Addign JS. Just will add hover or click effect)

--- a/UtopiaCity/Views/PermitedConditions/FlashLightView.cshtml
+++ b/UtopiaCity/Views/PermitedConditions/FlashLightView.cshtml
@@ -5,16 +5,16 @@
     <thead>
         <tr>
             <th>
-                Вкл / Выкл
+                Off/On
             </th>
             <th>
-                Дата
+                Date
             </th>
             <th>
-                Сезон
+                Season
             </th>
             <th>
-                Время суток
+                Day/Night
             </th>
         </tr>
     </thead>
@@ -28,12 +28,12 @@
                         {
                             if (item.TimeOfDay == "night")
                             {
-                                <span>ВКЛ</span>
+                                <span>On</span>
                             }
                         }
                         else
                         {
-                            <span>ВЫКЛ</span>
+                            <span>Off</span>
                         }
                     }
                 </td>
