--- a/UtopiaCity/Views/TimelineBasic/Searching.cshtml
+++ b/UtopiaCity/Views/TimelineBasic/Searching.cshtml
@@ -3,7 +3,7 @@
 
 <form asp-controller="TimelineBasic" asp-action="Searching">
     <p>
-        Введите город Отправлене/Прибытия: <input type="text" name="SearchString" method="get" />
+        Input time of Departure/Arrival: <input type="text" name="SearchString" method="get" />
         <input type="submit" value="Поиск" />
     </p>
 </form>
@@ -13,19 +13,19 @@
     <thead>
         <tr>
             <th>
-                Номер рейса
+                Flight Number
             </th>
             <th>
-                От куда
+                From
             </th>
             <th>
-                Куда
+                To
             </th>
             <th>
-                Время отправления
+                Departure
             </th>
             <th>
-                Время прибытия
+                Arrival
             </th>
         </tr>
     </thead>
