--- a/UtopiaCity/Views/MailSender/Index.cshtml
+++ b/UtopiaCity/Views/MailSender/Index.cshtml
@@ -7,45 +7,39 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css">
-    <link rel="stylesheet" type="text/css" href="~/css/site.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="~/css/Timeline/modalViewStyle.css">
 </head>
 <body>
 
-    <div class="bg-contact2" style="background-image: url('images/bg-01.jpg');">
-        <div class="container-contact2">
-            <div class="wrap-contact2">
-                <span class="contact2-form-title">
-                    Contact Us
-                </span>
-
-                <div class="wrap-input2 validate-input" data-validate="Name is required">
-                    <input class="input2" type="text" id="name">
-                    <span class="focus-input2" data-placeholder="NAME"></span>
-                </div>
-
-                <div class="wrap-input2 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                    <input class="input2" type="text" id="email">
-                    <span class="focus-input2" data-placeholder="EMAIL"></span>
-                </div>
-
-                <div class="wrap-input2 validate-input" data-validate="Message is required">
-                    <textarea class="input2" id="message"></textarea>
-                    <span class="focus-input2" data-placeholder="MESSAGE"></span>
-                </div>
-
-                <div class="container-contact2-form-btn">
-                    <div class="wrap-contact2-form-btn">
-                        <div class="contact2-form-bgbtn"></div>
-                        <input type="button" class="contact2-form-btn" id="send" onclick="SendEmail();" value="Send Your Message" />
-                    </div>
-                </div>
+    <form class="bg-contact2">
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Name</label>
+            <div class="wrap-input2 validate-input">
+                <input type="email" class="input2 form-control" id="name" aria-describedby="emailHelp">
             </div>
         </div>
-    </div>
+        <div class="mb-3">
+            <div class="wrap-input2 validate-input">
+                <label for="exampleInputPassword1" class="form-label">E-mail</label>
+                <input type="text" class="form-control" id="email">
+            </div>
+        </div>
+        <div class="mb-3">
+            <div class="wrap-input2 validate-input form-group">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="input2 form-control" id="message" rows="3" style="resize: none; "></textarea>
+            </div>
+        </div>
+        <button type="button" class="btn btn-primary contact2-form-btn" id="send" onclick="SendEmail(); " value="Send Message">Submit</button>
+    </form>
+
     <!-- Image loader -->
-    <div id='loader' style='display: none;'>
-        <img src='https://cdn.dribbble.com/users/442750/screenshots/2196790/3.gif' width='500px' height='500px'>
+    <!--
+    <div class="spinner-border" id="loader" role="status" style="display: none;">
+    -->
+    <div class="spinner-border text-info" id="loader" style="width: 5rem; height: 5rem; display: none; " role="status">
+        <span class="sr-only">Loading...</span>
     </div>
     <!-- Image loader -->
 
