--- a/UtopiaCity/Views/Schedule/Index.cshtml
+++ b/UtopiaCity/Views/Schedule/Index.cshtml
@@ -1,25 +1,17 @@
 ﻿@model UtopiaCity.Models.TimelineModel.CollectionDataModel.MultipleModel
-@using UtopiaCity.Controllers.Timeline
-<h1>Hello from CommonModel</h1>
+<h1>Hello from Common Model</h1>
 
-<div class="row m-1 p-1">
-    <div class="col-3">
-        <a href="@Url.Action("Index", "Schedule", new {name="Sunny" }, null)">Sunny</a>
-    </div>
-    <div class="col-3">
-        <a href="@Url.Action("Index", "Schedule", new {name="Rainy" }, null)">Rainy</a>
-    </div>
-    <div class="col-3">
-        <a href="@Url.Action("Index", "Schedule", new {name="Cloudy" }, null)">Cloudy</a>
-    </div>
-    <div class="col-3">
-        <a href="@Url.Action("Index", "Schedule", new {name="Foggy" }, null)">Foggy</a>
-    </div>
-</div>
+
+<nav class="nav nav-pills nav-fill">
+    <a class="nav-item nav-link" href="@Url.Action("Index", "Schedule", new {name="Sunny" }, null)">Sunny</a>
+    <a class="nav-item nav-link" href="@Url.Action("Index", "Schedule", new {name="Rainy" }, null)">Rainy</a>
+    <a class="nav-item nav-link" href="@Url.Action("Index", "Schedule", new {name="Cloudy" }, null)">Cloudy</a>
+    <a class="nav-item nav-link" href="@Url.Action("Index", "Schedule", new {name="Foggy" }, null)">Foggy</a>
+</nav>
+
 
 @foreach (var item in Model.Flight)
 {
     <li>@item.FlightNumber</li>
     <li>@item.Weather</li>
 }
-
